fixed default config, added admin site

--- a/ingress/default.conf
+++ b/ingress/default.conf
@@ -3,22 +3,22 @@ server {
   listen [::]:443 ssl http2 default_server;
   ssl_certificate /etc/ssl/transacta.pem;
   ssl_certificate_key /etc/ssl/transacta.key;
-  location / {
-    proxy_pass  http://app;
-  }
-}
+  server_name  transacta.ongrid.pro;
 
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  ssl_certificate /etc/ssl/transacta.pem;
-  ssl_certificate_key /etc/ssl/transacta.key;
-  location / {
+  location /api {
     add_header Access-Control-Allow-Origin * always;
     add_header Access-Control-Allow-Headers * always;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Proto https;
-    proxy_pass  http://api;
+    proxy_pass http://api/api;
+  }
+
+  location /admin {
+    add_header Access-Control-Allow-Origin * always;
+    add_header Access-Control-Allow-Headers * always;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_pass http://api/admin;
   }
 
   location /static/ {
@@ -34,5 +34,9 @@ server {
     root /token_metadata/;
     autoindex on;
     rewrite ^/token_metadata(.*)$ $1 break;
+  }
+
+  location / {
+    proxy_pass  http://app:3000;
   }
 }
