fixed app issues

--- a/ingress/default.conf
+++ b/ingress/default.conf
@@ -21,9 +21,9 @@ server {
     proxy_pass http://api/admin;
   }
 
-  location /static/ {
-    root /static/;
-    rewrite ^/static(.*)$ $1 break;
+  location /backend_static/ {
+    root /backend_static/;
+    rewrite ^/backend_static(.*)$ $1 break;
   }
 
   location /media/ {
