--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: ingress
     volumes:
       - /etc/ssl:/etc/ssl
-      - static:/static
+      - backend_static:/backend_static/
       - media:/media
     restart: on-failure
     depends_on:
@@ -27,7 +27,7 @@ services:
     image: api
     build: ./api
     volumes:
-      - static:/static/
+      - backend_static:/backend_static/
       - media:/app/media/
     ports:
       - "8081:80"
@@ -82,6 +82,6 @@ services:
     restart: on-failure
 
 volumes:
-  static:
+  backend_static:
   db:
   media:
