fixed app issues

--- a/ingress/default.conf
+++ b/ingress/default.conf
@@ -5,6 +5,14 @@ server {
   ssl_certificate_key /etc/ssl/transacta.key;
   server_name  transacta.ongrid.pro;
 
+  location /graph {
+    add_header Access-Control-Allow-Origin * always;
+    add_header Access-Control-Allow-Headers * always;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_pass xxx;
+  }
+
   location /api {
     add_header Access-Control-Allow-Origin * always;
     add_header Access-Control-Allow-Headers * always;
