--- a/ingress/default.conf
+++ b/ingress/default.conf
@@ -1,3 +1,21 @@
+  upstream graph {
+    server graph_node:8000;
+  }
+
+  upstream websocket {
+    server graph_node:8001;
+  }
+
+  map $http_upgrade $destination {
+    default graph;
+    websocket websocket;
+  }
+
+  map $http_upgrade $connection_upgrade {
+      default close;
+      websocket upgrade;
+  }
+
 server {
   listen 443 ssl http2 default_server;
   listen [::]:443 ssl http2 default_server;
@@ -5,12 +23,22 @@ server {
   ssl_certificate_key /etc/ssl/transacta.key;
   server_name  transacta.ongrid.pro;
 
-    location /graph {
+  location /subgraphs {
     add_header Access-Control-Allow-Origin * always;
     add_header Access-Control-Allow-Headers * always;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-Proto https;
-    proxy_pass http://graph_node;
+    proxy_pass http://$destination;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+  }
+
+  location /graphql {
+    add_header Access-Control-Allow-Origin * always;
+    add_header Access-Control-Allow-Headers * always;
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_pass http://graph_node:8030/graphql;
   }
 
   location /api {
