--- a/ingress/default.conf
+++ b/ingress/default.conf
@@ -23,7 +23,7 @@ server {
   ssl_certificate_key /etc/ssl/transacta.key;
   server_name  transacta.ongrid.pro;
 
-  location /subgraphs {
+  location /subgraphs/name/ongrid {
     add_header Access-Control-Allow-Origin * always;
     add_header Access-Control-Allow-Headers * always;
     proxy_set_header Host $host;
