--- a/polybase_integration/Dockerfile
+++ b/polybase_integration/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18
 
 WORKDIR /app
 
-COPY ["package.json", "polybase_worker.js"] ./
+COPY ["package.json", "polybase_worker.mjs"] ./
 RUN yarn install
 
-CMD node polybase_worker.js
+CMD node polybase_worker.mjs
