--- a/polybase_integration/package.json
+++ b/polybase_integration/package.json
@@ -1,9 +1,13 @@
 {
-  "devDependencies": {
-    "@polybase/client": "^0.3.38",
-    "dotenv": "^16.0.3",
-    "pg": "^8.10.0",
-    "sequelize": "^6.29.3"
-  },
-  "type": "module"
+  "name": "polybase_integration",
+  "version": "1.0.0",
+  "author": "Vadim Volkov",
+  "license": "MIT",
+  "private": false,
+  "dependencies": {
+    "@polybase/client": "0.3.38",
+    "dotenv": "16.0.3",
+    "pg": "8.10.0",
+    "sequelize": "6.30.0"
+  }
 }
