--- a/contracts/package.json
+++ b/contracts/package.json
@@ -24,6 +24,9 @@
     "ethers": "^5.5.1",
     "hardhat-deploy": "^0.11.25",
     "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solhint": "^3.4.1",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.1.0"
   }
