--- a/contracts/zkSync/package.json
+++ b/contracts/zkSync/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
     "@matterlabs/hardhat-zksync-solc": "^0.3.14",
+    "@matterlabs/zksync-contracts": "^0.6.1",
     "ethers": "^5.7.2",
     "hardhat": "^2.13.0",
     "ts-node": "^10.9.1",
@@ -13,6 +14,7 @@
     "zksync-web3": "^0.14.3"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "dotenv": "^16.0.3"
   }
 }
