--- a/contracts/zkSync/.env.example
+++ b/contracts/zkSync/.env.example
@@ -1,2 +1,7 @@
-PRIVATE_KEY="<WALLET-PRIVATE-KEY>"
-ETH_URL="https://eth-goerli.g.alchemy.com/v2/<KEY>"
+PRIVATE_KEY="<PRIVATE_KEY>"
+API_KEY="<API_KEY>"
+ETH_URL="https://eth-goerli.g.alchemy.com/v2/<API_KEY>"
+ZKSYNC_URL="https://zksync2-testnet.zksync.dev"
+ADDRESS_L1=""
+ADDRESS_L2=""
+
