--- a/contracts/zkSync/package.json
+++ b/contracts/zkSync/package.json
@@ -4,17 +4,29 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/web": "^5.7.1",
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
-    "@matterlabs/hardhat-zksync-solc": "^0.3.14",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.16",
+    "@matterlabs/hardhat-zksync-verify": "^0.1.4",
     "@matterlabs/zksync-contracts": "^0.6.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@types/node": "^18.15.11",
     "ethers": "^5.7.2",
     "hardhat": "^2.13.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.3",
     "zksync-web3": "^0.14.3"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@openzeppelin/contracts": "^4.8.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "hardhat-deploy": "^0.11.25",
+    "i": "^0.3.7",
+    "npm": "^9.6.4",
+    "solc": "0.4.17"
   }
 }
